--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,6 +34,7 @@
   <div class="form-group">
     <label for="burger-name">Add a Burger:</label>
     <input type="text" id="burger-name" name="name">
+    <button type="submit">Submit</button>
   </div>
 
 </form>
