made changes to fix bug where orm wasn't working

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -33,8 +33,9 @@
 
   <div class="form-group">
     <label for="burger-name">Add a Burger:</label>
-    <input type="text" id="burger-name" name="name">
-    <button type="submit">Submit</button>
+    <input type="text" id="burger-name" name="burger_name">
   </div>
+
+  <button type="submit">Submit</button>
 
 </form>
