--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
+	<head>
+		<meta charset="UTF-8">
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<title>EAT-DA-BURGER</title>
 	</head>
+
 	<body>
-		{{{ body }}}
+		<div class="container">
+			<div class="row">
+				<div class="col-sm-4 col-sm-offset-8" id="title">
+					<h1>Eat-Da-Burger</h1>
+				</div>
+			</div>
+
+			<div class="row">
+				<div class="col-sm-6 col-sm-offset-6" id="burgerList">
+					{{{ body }}}
+				</div>
+			</div>
+
+		</div>
+
+
 	</body>
 </html>
